ec2.tf
#3. Launch Template for EC2 Instances
resource "aws_launch_template" "ec2_launch_template" {
  name = "yt-web-server"

  image_id      = data.aws_ami.fedora.id //Copy the ami id from aws console
  instance_type = "t2.medium"
  key_name = "key1"
  network_interfaces {
    associate_public_ip_address = false
    security_groups             = [aws_security_group.ec2_sg.id]
  }

  user_data = filebase64("userdata.sh")

  tag_specifications {
    resource_type = "instance"
    tags = {
      Name = "yt-ec2-web-server"
    }
  }
}

#2. Application Load Balancer
resource "aws_lb" "app_lb" {
  name               = "yt-app-lb"
  load_balancer_type = "application"
  internal           = false
  security_groups    = [aws_security_group.alb_sg.id]
  subnets            = aws_subnet.public_subnet[*].id
  depends_on         = [aws_internet_gateway.igw_vpc]
}

# Target Group for ALB
resource "aws_lb_target_group" "alb_ec2_tg" {
  name     = "yt-web-server-tg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.custom_vpc.id
  tags = {
    Name = "yt-alb_ec2_tg"
  }
}

resource "aws_lb_listener" "alb_listener" {
  load_balancer_arn = aws_lb.app_lb.arn
  port              = "80"
  protocol          = "HTTP"
  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.alb_ec2_tg.arn
  }
  tags = {
    Name = "yt-alb-listener"
  }
}





#-----------------------------------------------------------------
resource "aws_launch_template" "ec2_priv_launch_template" {
  name = "yt-web-server2"

  image_id      = data.aws_ami.fedora.id //Copy the ami id from aws console
  instance_type = "t2.medium"
  key_name = "key1"
  network_interfaces {
    associate_public_ip_address = false
    security_groups             = [aws_security_group.ec2_priv_sg.id]
  }

  user_data = filebase64("userdata.sh")

  tag_specifications {
    resource_type = "instance"
    tags = {
      Name = "yt-ec2-web-server"
    }
  }
}

#2. Application Load Balancer
resource "aws_lb" "app_lb_priv" {
  name               = "yt-app-lb2"
  load_balancer_type = "application"
  internal           = true
  security_groups    = [aws_security_group.ec2_sg.id]
  subnets            = aws_subnet.private_subnet2[*].id
  depends_on         = [aws_internet_gateway.igw_vpc]
}

# Target Group for ALB
resource "aws_lb_target_group" "alb_ec2_tg_priv" {
  name     = "yt-web-server-tg2"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.custom_vpc.id
  tags = {
    Name = "yt-alb_ec2_tg"
  }

}

resource "aws_lb_listener" "alb_listener_priv" {
  load_balancer_arn = aws_lb.app_lb_priv.arn
  port              = "80"
  protocol          = "HTTP"
  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.alb_ec2_tg_priv.arn
  }
  tags = {
    Name = "yt-alb-listener2"
  }
}
